--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,7 +20,8 @@
     "firebase-admin": "^10.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "slate": "^0.72.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
