--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "is-hotkey": "^0.2.0",
@@ -23,11 +25,14 @@
     "react-use-websocket": "^2.9.1",
     "slate": "^0.66.5",
     "slate-history": "^0.66.0",
+    "slate-hyperscript": "^0.67.0",
     "slate-react": "^0.66.4",
+    "styled-components": "^5.3.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
+    "@types/styled-components": "^5.1.21",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "http-proxy-middleware": "^2.0.1",
