--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "escape-html": "^1.0.3",
     "is-hotkey": "^0.2.0",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -28,11 +29,14 @@
     "slate-hyperscript": "^0.67.0",
     "slate-react": "^0.66.4",
     "styled-components": "^5.3.3",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/escape-html": "^1.0.1",
     "@types/react": "17.0.27",
     "@types/styled-components": "^5.1.21",
+    "@types/uuid": "^8.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "http-proxy-middleware": "^2.0.1",
