--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,7 +23,9 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "react-use-websocket": "^2.9.1",
+    "redux": "^4.1.2",
     "slate": "^0.66.5",
     "slate-history": "^0.66.0",
     "slate-hyperscript": "^0.67.0",
