feat: Add Cypress tests and finish link updating

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,16 +12,28 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@hocuspocus/extension-logger": "^1.0.0-alpha.65",
+    "@hocuspocus/server": "^1.0.0-alpha.91",
+    "@nestjs/graphql": "^9.1.2",
+    "@slate-collaborative/backend": "^0.7.2",
+    "@slate-collaborative/bridge": "^0.7.2",
+    "@slate-yjs/core": "^0.2.0",
+    "@teamwork/websocket-json-stream": "^2.0.0",
+    "apollo-server-express": "^3.6.2",
+    "automerge": "^1.0.1-preview.6",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-ws": "^5.0.2",
     "firebase-admin": "^10.0.0",
+    "graphql": "^15.8.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.1",
-    "slate": "^0.72.3"
+    "slate": "^0.72.3",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -29,8 +41,10 @@
     "@types/express-ws": "^3.0.1",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.178",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.10.6",
+    "@types/sharedb": "^2.2.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "ts-jest": "^27.0.7",
