--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hocuspocus/provider": "^1.0.0-alpha.29",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
+    "@slate-collaborative/client": "^0.7.2",
+    "@slate-yjs/core": "^0.2.0",
+    "@types/sharedb": "^2.2.0",
     "escape-html": "^1.0.3",
     "is-hotkey": "^0.2.0",
     "next": "11.1.2",
@@ -26,13 +30,18 @@
     "react-redux": "^7.2.6",
     "react-use-websocket": "^2.9.1",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "sharedb": "^2.2.5",
     "slate": "^0.66.5",
     "slate-history": "^0.66.0",
     "slate-hyperscript": "^0.67.0",
     "slate-react": "^0.66.4",
+    "slate-yjs": "^3.2.0",
     "styled-components": "^5.3.3",
     "swr": "^1.0.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "y-protocols": "^1.0.5",
+    "yjs": "^13.5.24"
   },
   "devDependencies": {
     "@types/escape-html": "^1.0.1",
