--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "cypress": "^9.4.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
     "npm-run-all": "^4.1.5"
